@@ -111,10 +111,18 @@ char *gdbmi_tgdb_send(char c){
     static char buf[4];
     memset(buf, '\0', 4); 
     buf[0] = c;
+
     if(io_write_byte(gdb_stdin, c) == -1){
         err_ret("%s:%d io_write_byte error", __FILE__, __LINE__);
         return NULL;
     }
+
+    /* Ask for the file name after every command */
+    if ( c == '\n' ) {
+        char *str = "-interpreter-exec console \"info source\"\n";
+        io_writen(gdb_stdin, strlen(str) , str);
+    }
+    
     return buf;   
 }
 
@@ -133,6 +141,7 @@ int gdbmi_tgdb_new_tty(void) {
 char *gdbmi_tgdb_tty_name(void) {
     return (char *)0;
 }
+
 
 char *gdbmi_tgdb_err_msg(void) {
    return (char *)0;
